--- a/style.css
+++ b/style.css
@@ -1,27 +1,53 @@
+/* styles.css */
 body {
-  font-family: sans-serif;
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 
-h1 {
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
   text-align: center;
 }
 
-p {
-  margin-bottom: 1em;
-}
-
-ul {
+nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  background-color: #f2f2f2;
+  text-align: center;
 }
 
-li {
-  margin-bottom: 1em;
+nav ul li {
+  display: inline-block;
+  margin-right: 10px;
 }
 
-a {
+nav ul li a {
+  display: block;
+  padding: 10px;
   text-decoration: none;
+  color: #333;
+}
+
+nav ul li a:hover {
+  background-color: #333;
+  color: #fff;
+}
+
+main {
+  padding: 20px;
+}
+
+section {
+  margin-bottom: 20px;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
 }
